--- a/src/css/SubHeader.module.css
+++ b/src/css/SubHeader.module.css
@@ -1,4 +1,4 @@
-.imageIcon {
+.greenBox {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -10,26 +10,25 @@
   max-width: 100%;
   overflow: hidden;
   max-height: 100%;
+  object-fit: cover;
 }
-.notice {
-  margin: 0;
+.title {
+  margin: auto;
   font-size: inherit;
   text-transform: uppercase;
   font-weight: 500;
   font-family: inherit;
 }
-.home,
-.homeIcon,
-.notice {
+.path,
+.pathIcon,
+.title {
   position: relative;
   z-index: 1;
 }
-.home {
+.path {
   text-decoration: none;
-  flex: 1;
   color: inherit;
-  display: inline-block;
-  min-width: 44.3px;
+  display: flex;  
 }
 .homeIcon {
   width: 6px;
@@ -42,34 +41,22 @@
   justify-content: flex-start;
   padding: var(--padding-6xs) 0 0;
 }
-.notice1 {
-  flex: 1;
-  position: relative;
-  font-weight: 500;
-  color: var(--default-white);
-  display: inline-block;
-  min-width: 47.4px;
-  z-index: 1;
-}
-.homeButton {
-  flex: 1;
+.homeButton,
+.subHeader,
+.subHeaderPath {
+  display:flex;
+  align-items:flex;
   flex-direction: row;
   gap: var(--gap-2xs-1);
 }
-.homeButton,
-.subHeader,
-.subHeaderButton {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-}
-.subHeaderButton {
+.subHeaderPath {
   width: 186.2px;
   flex-direction: row;
   padding: 0 var(--padding-15xl);
   box-sizing: border-box;
   font-size: var(--large-bold-size);
   color: var(--color-gray-400);
+  margin: auto;
 }
 .subHeader {
   align-self: stretch;
