--- a/src/css/Footer.module.css
+++ b/src/css/Footer.module.css
@@ -1,5 +1,4 @@
-.academyLogoBackground,
-.footerBackground {
+.academyLogoBackground{
   width: 100%;
   height: 100%;
   position: absolute;
@@ -450,12 +449,13 @@
   flex-direction: row;
   align-items: flex-start;
   justify-content: center;
-  padding: 0 0 0 var(--padding-12xs);
+  padding: 0 0 0 0;
   font-size: var(--font-size-lg);
   color: var(--color-gray-500);
   font-family: var(--font-poppins);
 }
 .footer {
+  bottom: 0px;
   flex-direction: column;
   justify-content: flex-start;
   padding: var(--padding-23xl) var(--padding-33xl) var(--padding-15xl)
@@ -466,6 +466,7 @@
   font-size: var(--large-bold-size);
   color: var(--default-white);
   font-family: var(--font-roboto);
+  background-color: var(--dark);
 }
 @media screen and (max-width: 975px) {
   .creativeLearnersAcademyContainer {
