--- a/src/css/Header.module.css
+++ b/src/css/Header.module.css
@@ -69,6 +69,7 @@
   align-items: flex-start;
   justify-content: flex-start;
   z-index: 1;
+  cursor: pointer;
 }
 .gallery1 {
   text-decoration: none;
@@ -85,6 +86,7 @@
   flex-direction: row;
   align-items: flex-start;
   justify-content: flex-start;
+  cursor: pointer;
   z-index: 1;
 }
 .home1 {
@@ -122,6 +124,7 @@
   align-items: flex-start;
   justify-content: flex-start;
   z-index: 1;
+  cursor: pointer;
 }
 .notice1 {
   text-decoration: none;
@@ -139,6 +142,7 @@
   align-items: flex-start;
   justify-content: flex-start;
   z-index: 1;
+  cursor: pointer;
 }
 .facilities1 {
   text-decoration: none;
@@ -156,6 +160,7 @@
   align-items: flex-start;
   justify-content: flex-start;
   z-index: 1;
+  cursor: pointer;
 }
 .contactUs1 {
   text-decoration: none;
@@ -167,6 +172,7 @@
 }
 .contactUs {
   position: absolute;
+  cursor: pointer;
   top: 0;
   left: 539px;
   display: flex;
@@ -205,6 +211,7 @@
   overflow: hidden;
   flex-shrink: 0;
   z-index: 1;
+  cursor: pointer;
 }
 .navItems {
   align-self: stretch;
@@ -380,7 +387,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  padding: 0 0 var(--padding-49xl);
+  padding: 0 0 0 0;
   box-sizing: border-box;
   gap: var(--gap-10xs-5);
   max-width: 100%;
@@ -399,7 +406,6 @@
 }
 @media screen and (max-width: 750px) {
   .headerParent {
-    padding-bottom: var(--padding-25xl);
     box-sizing: border-box;
   }
 }
