--- a/src/css/components/Gallery.module.css
+++ b/src/css/components/Gallery.module.css
@@ -54,10 +54,10 @@
   flex-direction: column;
 }
 .galleryHeader {
+  margin: auto;
   width: 1063px;
   flex-direction: row;
   justify-content: center;
-  padding: 0 var(--padding-xl);
   box-sizing: border-box;
   max-width: 100%;
 }
@@ -96,12 +96,13 @@
   flex-direction: column;
   justify-content: flex-start;
   gap: var(--gap-47xl-6);
+  margin: auto;
 }
 .gallery {
-  width: 1122px;
+  width: 100%;
   flex-direction: row;
   justify-content: flex-end;
-  padding: 0 var(--padding-6xs) var(--padding-66xl);
+  padding: var(--padding-6xs) 0 var(--padding-66xl) 0;
   box-sizing: border-box;
   text-align: left;
   font-size: var(--font-size-11xl);
