--- a/src/css/page/AboutUs.module.css
+++ b/src/css/page/AboutUs.module.css
@@ -1,250 +1,4 @@
-.headerChild {
-  height: 100px;
-  width: 1160px;
-  position: relative;
-  box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
-  background-color: var(--default-white);
-  display: none;
-  max-width: 100%;
-}
-.image3Icon {
-  height: 73px;
-  width: 72.5px;
-  position: relative;
-  object-fit: cover;
-  cursor: pointer;
-  z-index: 1;
-}
-.creative {
-  text-decoration: none;
-  color: inherit;
-  display: inline-block;
-  min-width: 105.7px;
-}
-.creative,
-.learnersAcademy1 {
-  position: relative;
-  font-weight: 600;
-  flex-shrink: 0;
-  white-space: nowrap;
-  cursor: pointer;
-  z-index: 1;
-}
-.creativeParent,
-.image3Parent,
-.learnersAcademy {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-}
-.learnersAcademy {
-  flex-direction: row;
-  padding: 0 0 0 var(--padding-11xs);
-  margin-top: -9px;
-}
-.creativeParent,
-.image3Parent {
-  flex-direction: column;
-}
-.image3Parent {
-  flex-direction: row;
-  align-items: flex-end;
-  gap: var(--gap-4xl-2);
-  max-width: 100%;
-}
-.aboutUs1 {
-  text-decoration: none;
-  position: relative;
-  color: inherit;
-  display: inline-block;
-  min-width: 68.1px;
-  white-space: nowrap;
-}
-.aboutUs {
-  position: absolute;
-  top: 0;
-  left: 73.5px;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  z-index: 1;
-  color: var(--medium);
-}
-.gallery1 {
-  text-decoration: none;
-  position: relative;
-  color: inherit;
-  display: inline-block;
-  min-width: 54.3px;
-}
-.gallery {
-  position: absolute;
-  top: 0;
-  left: 457.2px;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  z-index: 1;
-}
-.home1 {
-  text-decoration: none;
-  position: relative;
-  color: inherit;
-  display: inline-block;
-  min-width: 46.3px;
-}
-.home {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  cursor: pointer;
-  z-index: 1;
-}
-.management1 {
-  text-decoration: none;
-  position: relative;
-  color: inherit;
-  display: inline-block;
-  min-width: 104px;
-}
-.management {
-  position: absolute;
-  top: 0;
-  left: 166px;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  z-index: 1;
-}
-.notice1 {
-  text-decoration: none;
-  position: relative;
-  color: inherit;
-  display: inline-block;
-  min-width: 48.6px;
-}
-.notice {
-  position: absolute;
-  top: 0;
-  left: 294px;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  z-index: 1;
-}
-.facilities1 {
-  text-decoration: none;
-  position: relative;
-  color: inherit;
-  display: inline-block;
-  min-width: 65.3px;
-}
-.facilities {
-  position: absolute;
-  top: 0;
-  left: 367px;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  z-index: 1;
-}
-.contactUs1 {
-  text-decoration: none;
-  position: relative;
-  color: inherit;
-  display: inline-block;
-  min-width: 83.5px;
-  white-space: nowrap;
-}
-.contactUs {
-  position: absolute;
-  top: 0;
-  left: 539px;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  z-index: 1;
-}
-.navLinks {
-  margin: 0;
-  align-self: stretch;
-  height: 23px;
-  position: relative;
-  flex-shrink: 0;
-  text-align: left;
-  font-size: var(--font-size-mini);
-  color: var(--third-template-colour);
-  font-family: var(--font-poppins);
-}
-.navMenu {
-  margin: 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-end;
-  padding: 0 0 var(--padding-9xs);
-  box-sizing: border-box;
-  max-width: 100%;
-}
-.accountIcon {
-  height: 40px;
-  width: 40.3px;
-  position: relative;
-  border-radius: var(--br-81xl);
-  overflow: hidden;
-  flex-shrink: 0;
-  z-index: 1;
-}
-.navigation {
-  align-self: stretch;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-end;
-  justify-content: flex-start;
-  gap: var(--gap-9xl);
-  max-width: 100%;
-}
-.header,
-.navigationAndUser {
-  display: flex;
-  align-items: flex-start;
-  box-sizing: border-box;
-  max-width: 100%;
-}
-.navigationAndUser {
-  width: 690.8px;
-  flex-direction: column;
-  justify-content: flex-start;
-  padding: var(--padding-smi) 0 0;
-}
-.header {
-  align-self: stretch;
-  box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
-  background-color: var(--default-white);
-  flex-direction: row;
-  justify-content: space-between;
-  padding: var(--padding-sm) var(--padding-12xl) var(--padding-smi)
-    var(--padding-sm);
-  top: 0;
-  z-index: 99;
-  position: sticky;
-  gap: var(--gap-xl);
-  text-align: left;
-  font-size: var(--font-size-5xl);
-  color: var(--color-darkslategray-100);
-  font-family: var(--font-poppins);
-}
+
 .missionVisionContent {
   align-self: stretch;
   position: relative;
@@ -274,572 +28,12 @@
 .missionVision {
   align-self: stretch;
   flex-direction: row;
-  padding: 0 var(--padding-35xl) 502px;
+  width: 1160px;
+  margin: auto;
+  padding: 48px var(--padding-35xl) 502px;
   box-sizing: border-box;
   text-align: center;
   font-size: var(--font-size-xl);
   color: var(--third-template-colour);
   font-family: var(--font-poppins);
-}
-.academyLogo,
-.rectangle {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  margin: 0 !important;
-  top: 488px;
-  right: -1160px;
-  bottom: -488px;
-  left: 1160px;
-  background-color: var(--dark);
-  transform: rotate(180deg);
-  transform-origin: 0 0;
-}
-.academyLogo {
-  top: 382px;
-  right: -274.7px;
-  bottom: -382px;
-  left: 274.7px;
-  background-color: var(--default-white);
-  z-index: 1;
-}
-.tittleIcon {
-  width: 184px;
-  height: 182px;
-  position: relative;
-  object-fit: cover;
-  z-index: 2;
-}
-.learners {
-  margin-block-start: 0;
-  margin-block-end: 5px;
-}
-.academy {
-  margin: 0;
-}
-.creativeLearnersAcademyContainer {
-  margin: 0;
-  position: relative;
-  font-size: inherit;
-  line-height: 40px;
-  font-weight: 400;
-  font-family: inherit;
-  z-index: 2;
-}
-.academyInfo,
-.academyNameContainer {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-}
-.academyNameContainer {
-  align-self: stretch;
-  flex-direction: row;
-  padding: 0 var(--padding-lgi) 0 var(--padding-smi);
-}
-.academyInfo {
-  width: 274.7px;
-  flex-direction: column;
-  padding: var(--padding-base) var(--padding-23xl) var(--padding-8xl);
-  box-sizing: border-box;
-  position: relative;
-  gap: var(--gap-8xl);
-  font-size: var(--font-size-17xl);
-  color: var(--color-midnightblue);
-  font-family: var(--font-roboto);
-}
-.home2,
-.links {
-  position: relative;
-  display: inline-block;
-  z-index: 1;
-}
-.links {
-  width: 127.3px;
-  font-weight: 800;
-}
-.home2 {
-  width: 100.3px;
-  letter-spacing: -0.02em;
-  line-height: 21px;
-}
-.gallery2,
-.management2,
-.notice2 {
-  position: relative;
-  letter-spacing: -0.02em;
-  line-height: 21px;
-  z-index: 1;
-}
-.notice2 {
-  display: inline-block;
-  min-width: 62.2px;
-}
-.gallery2 {
-  flex: 1;
-  flex-shrink: 0;
-}
-.galleryLink {
-  width: 102.3px;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  padding: 0 var(--padding-12xs);
-  box-sizing: border-box;
-}
-.contactUs2 {
-  position: relative;
-  letter-spacing: -0.02em;
-  line-height: 24px;
-  display: inline-block;
-  min-width: 114.3px;
-  z-index: 1;
-}
-.galleryContact,
-.secondaryLinks {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: var(--gap-6xl);
-}
-.secondaryLinks {
-  gap: var(--gap-3xl);
-}
-.primaryLinks {
-  gap: var(--gap-6xl);
-  font-size: var(--font-size-xl);
-  color: var(--default-white);
-}
-.footerLinks,
-.linkItems,
-.primaryLinks {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-}
-.linkItems {
-  gap: var(--gap-xl);
-}
-.footerLinks {
-  padding: var(--padding-5xs) 0 0;
-}
-.findUs {
-  flex: 1;
-  position: relative;
-  font-weight: 800;
-  flex-shrink: 0;
-  z-index: 1;
-}
-.findUsTitle {
-  width: 129.3px;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  padding: 0 var(--padding-12xs);
-  box-sizing: border-box;
-}
-.madhyapurThimi6,
-.placeholder {
-  line-height: 33px;
-  white-space: pre-wrap;
-  display: inline-block;
-}
-.madhyapurThimi6 {
-  width: 235.6px;
-  height: 96px;
-  position: relative;
-  flex-shrink: 0;
-  z-index: 1;
-}
-.placeholder {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-.phoneAltIcon {
-  position: absolute;
-  top: 2px;
-  left: 3px;
-  width: 19.7px;
-  height: 25px;
-  overflow: hidden;
-}
-.envelopeIcon,
-.phone {
-  width: 235.6px;
-  height: 33px;
-  position: relative;
-}
-.envelopeIcon {
-  width: 30.5px;
-  height: 26.6px;
-  overflow: hidden;
-  flex-shrink: 0;
-}
-.emailIcon {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  padding: var(--padding-11xs-3) 0 0;
-}
-.claschoolnpgmailcom {
-  margin-left: -7.4px;
-  width: 288.7px;
-  height: 93px;
-  position: relative;
-  line-height: 32px;
-  white-space: pre-wrap;
-  display: inline-block;
-  flex-shrink: 0;
-}
-.emailAddress {
-  flex-direction: column;
-  justify-content: flex-start;
-  padding: 0;
-}
-.contactIcons,
-.email,
-.emailAddress {
-  display: flex;
-  align-items: flex-start;
-}
-.email {
-  align-self: stretch;
-  flex-direction: row;
-  justify-content: flex-start;
-}
-.contactIcons {
-  gap: var(--gap-2xs);
-  margin-top: -20px;
-}
-.contactIcons,
-.findUsInfo,
-.madhyapurThimi6HulakroadParent {
-  align-self: stretch;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-.madhyapurThimi6HulakroadParent {
-  display: flex;
-  align-items: flex-start;
-  font-size: var(--font-size-xl);
-  color: var(--default-white);
-}
-.findUsInfo {
-  gap: var(--gap-xl);
-}
-.findUsInfo,
-.findUsInfoWrapper,
-.footerContent {
-  display: flex;
-  align-items: flex-start;
-}
-.findUsInfoWrapper {
-  width: 311.8px;
-  flex-direction: column;
-  justify-content: flex-start;
-  padding: var(--padding-5xs) 0 0;
-  box-sizing: border-box;
-}
-.footerContent {
-  align-self: stretch;
-  flex-direction: row;
-  justify-content: space-between;
-  gap: var(--gap-xl);
-  font-size: var(--font-size-6xl);
-  color: var(--light);
-  font-family: var(--font-poppins);
-}
-.iconBd {
-  position: absolute;
-  height: 6.51%;
-  width: 89.23%;
-  top: -0.19%;
-  right: -2.69%;
-  bottom: 93.68%;
-  left: 13.47%;
-  border-radius: var(--br-11xs);
-  background-color: var(--color-silver);
-  border: 1.5px solid var(--color-black);
-  box-sizing: border-box;
-}
-.div,
-.volleyballBallIcon {
-  position: absolute;
-  display: none;
-}
-.volleyballBallIcon {
-  top: 354.3px;
-  left: 9.7px;
-  width: 15.5px;
-  height: 16.9px;
-  overflow: hidden;
-}
-.div {
-  width: 32.66%;
-  top: calc(50% - 36.1px);
-  left: 67.34%;
-}
-.iconChild,
-.iconItem {
-  position: absolute;
-  top: 342.8px;
-  left: 22.7px;
-  width: 22.7px;
-  height: 24.2px;
-  object-fit: contain;
-}
-.iconItem {
-  top: 366.1px;
-  left: 24px;
-  width: 24px;
-  height: 23.3px;
-}
-.icon {
-  width: 29.7px;
-  height: 367px;
-  position: relative;
-  display: none;
-  z-index: 2;
-}
-.safariIcon {
-  width: 24.9px;
-  height: 25px;
-  position: absolute;
-  margin: 0 !important;
-  top: 113px;
-  right: 339.1px;
-  overflow: hidden;
-  flex-shrink: 0;
-  z-index: 2;
-}
-.iconBd1 {
-  position: absolute;
-  height: 6.3%;
-  width: 89.23%;
-  top: 0;
-  right: -5.05%;
-  bottom: 93.7%;
-  left: 15.82%;
-  border-radius: var(--br-11xs);
-  background-color: var(--color-silver);
-  border: 1.5px solid var(--color-black);
-  box-sizing: border-box;
-}
-.div1,
-.volleyballBallIcon1 {
-  position: absolute;
-  display: none;
-}
-.volleyballBallIcon1 {
-  top: 366.5px;
-  left: 9.7px;
-  width: 15.5px;
-  height: 16.9px;
-  overflow: hidden;
-}
-.div1 {
-  width: 35.69%;
-  top: calc(50% - 29.95px);
-  left: 72.39%;
-}
-.iconInner,
-.lineIcon {
-  position: absolute;
-  top: 355px;
-  left: 0;
-  width: 22.7px;
-  height: 24.2px;
-  object-fit: contain;
-}
-.lineIcon {
-  width: 24px;
-  height: 23.3px;
-}
-.icon1 {
-  width: 29.7px;
-  height: 379.1px;
-  position: relative;
-  display: none;
-  z-index: 4;
-}
-.iconBd2 {
-  position: absolute;
-  height: 6.21%;
-  width: 86.64%;
-  top: 0;
-  right: -6.07%;
-  bottom: 93.79%;
-  left: 19.43%;
-  border-radius: var(--br-11xs);
-  background-color: var(--color-silver);
-  border: 1.5px solid var(--color-black);
-  box-sizing: border-box;
-}
-.div2,
-.volleyballBallIcon2 {
-  position: absolute;
-  display: none;
-}
-.volleyballBallIcon2 {
-  top: 371.9px;
-  left: 7.7px;
-  width: 12.3px;
-  height: 16.9px;
-  overflow: hidden;
-}
-.div2 {
-  width: 43.32%;
-  top: calc(50% - 27.3px);
-  left: 88.26%;
-}
-.iconChild1,
-.iconChild2 {
-  position: absolute;
-  top: 360.4px;
-  left: 0;
-  width: 18.1px;
-  height: 24.2px;
-  object-fit: contain;
-}
-.iconChild2 {
-  width: 19.1px;
-  height: 23.3px;
-}
-.icon2 {
-  width: 24.7px;
-  height: 384.6px;
-  position: relative;
-  display: none;
-  z-index: 5;
-}
-.copyright2024 {
-  position: relative;
-  letter-spacing: -0.02em;
-  line-height: 21px;
-  font-weight: 500;
-  z-index: 1;
-}
-.copyright2024AllRightReWrapper {
-  align-self: stretch;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: center;
-  padding: 0 0 0 var(--padding-12xs);
-  font-size: var(--font-size-lg);
-  color: var(--color-gray-500);
-  font-family: var(--font-poppins);
-}
-.aboutUs4,
-.footer {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-}
-.footer {
-  align-self: stretch;
-  padding: var(--padding-23xl) var(--padding-33xl) var(--padding-15xl) 62px;
-  gap: var(--gap-4xs);
-  text-align: left;
-  font-size: var(--large-bold-size);
-  color: var(--default-white);
-  font-family: var(--font-roboto);
-}
-.aboutUs4 {
-  width: 100%;
-  background-color: var(--default-white);
-  overflow: hidden;
-  gap: var(--gap-12xs);
-  line-height: normal;
-  letter-spacing: normal;
-}
-@media screen and (max-width: 1050px) {
-  .creativeParent {
-    display: none;
-  }
-  .missionVisionContentParent {
-    gap: var(--gap-17xl);
-  }
-}
-@media screen and (max-width: 1000px) {
-  .missionVision {
-    padding-bottom: 212px;
-    box-sizing: border-box;
-  }
-  .creativeLearnersAcademyContainer {
-    font-size: var(--font-size-10xl);
-    line-height: 32px;
-  }
-  .footerContent {
-    flex-wrap: wrap;
-  }
-}
-@media screen and (max-width: 725px) {
-  .missionVisionTitles {
-    gap: var(--gap-6xl);
-  }
-  .missionVisionContentParent {
-    gap: var(--gap-lg);
-  }
-  .missionVision {
-    padding-left: var(--padding-8xl);
-    padding-right: var(--padding-8xl);
-    box-sizing: border-box;
-  }
-  .footer {
-    padding: var(--padding-8xl) var(--padding-7xl) var(--padding-3xl)
-      var(--padding-12xl);
-    box-sizing: border-box;
-  }
-}
-@media screen and (max-width: 450px) {
-  .navMenu {
-    display: none;
-  }
-  .missionVisionContent {
-    font-size: var(--large-bold-size);
-    line-height: 32px;
-  }
-  .missionVision {
-    padding-bottom: 138px;
-    box-sizing: border-box;
-  }
-  .creativeLearnersAcademyContainer {
-    font-size: var(--font-size-3xl);
-    line-height: 24px;
-  }
-  .academyInfo {
-    padding: var(--padding-xl);
-    box-sizing: border-box;
-  }
-  .links {
-    font-size: var(--font-size-xl);
-  }
-  .contactUs2,
-  .gallery2,
-  .home2,
-  .management2,
-  .notice2 {
-    font-size: var(--large-bold-size);
-    line-height: 17px;
-  }
-  .findUs {
-    font-size: var(--font-size-xl);
-  }
-  .claschoolnpgmailcom,
-  .madhyapurThimi6,
-  .placeholder {
-    font-size: var(--large-bold-size);
-    line-height: 26px;
-  }
 }
