--- a/src/css/page/Contact.module.css
+++ b/src/css/page/Contact.module.css
@@ -528,7 +528,7 @@
   border: 0;
   flex-direction: column;
   padding: var(--padding-lg) var(--padding-lgi);
-  background-image: url(/public/map@3x.png);
+  background-image: url(/map@3x.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
