랜딩페이지 수정

--- a/src/css/layout/Header.module.css
+++ b/src/css/layout/Header.module.css
@@ -213,6 +213,9 @@
   z-index: 1;
   cursor: pointer;
 }
+.relative:hover nav {
+  display: block;
+}
 .navItems {
   align-self: stretch;
   display: flex;
