--- a/src/css/page/Contact.module.css
+++ b/src/css/page/Contact.module.css
@@ -10,3 +10,28 @@
   color: var(--third-template-colour);
   font-family: var(--font-poppins);
 }
+/* global.css or styles.css */
+@keyframes shadowPulse {
+  0% {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  50% {
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+  }
+  100% {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+}
+
+.animate-shadow {
+  animation: shadowPulse 2s infinite ease-in-out;
+}
+.bg-custom-circle {
+  background: radial-gradient(circle, rgba(255, 255, 0, 0.6), rgba(255, 255, 0, 0));
+  border-radius: 50%; /* Makes the background circular */
+  width: 200px; /* Set a fixed width */
+  height: 200px; /* Set a fixed height */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
